completed 2nd sub section

--- a/index.html
+++ b/index.html
@@ -25,11 +25,25 @@
             <div class="placeholder">
                 <p>this is a placeholer image</p>
             </div> 
-
         </div>
+        <p class ="subheader">Some Random Information</p>
         <div class = "two">
-
-        </div>
+            <div class="squares">
+                <div class ="square"></div>
+                <p>this is subtext under the square</p>
+            </div>
+            <div class="squares">
+                <div class ="square"></div>
+                    <p>this is subtext under the square</p>
+            </div>
+            <div class="squares">
+                <div class ="square"></div>
+                    <p>this is subtext under the square</p>
+            </div>
+            <div class="squares">
+                <div class ="square"></div>
+                    <p>this is subtext under the square</p>
+            </div>
         <div class = "three">
             
         </div>
