finished 3rd section

--- a/index.html
+++ b/index.html
@@ -44,8 +44,16 @@
                 <div class ="square"></div>
                     <p>this is subtext under the square</p>
             </div>
+            </div>
         <div class = "three">
-            
+            <div class ="contents">
+                <div class ="paragraph">
+                    <P> illum officiis placeat totam non aut vitae, saepe odit beatae aliquid impedit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius non repudiandae saepe beatae aut sit neque adipisci repellendus necessitatibus consequatur aspernatur cupiditate voluptatem voluptatum voluptate illum, rem dolore provident odio.</P>
+                </div>
+                <div class="author">
+                    <p>-Thor, god of Thunder</p>
+                </div>
+            </div>
         </div>
         <div class = "four">
             
