completed landing page!

--- a/index.html
+++ b/index.html
@@ -56,8 +56,18 @@
             </div>
         </div>
         <div class = "four">
-            
+            <div class ="call">
+                <div>
+                    <p class="call-title">Call to action, It's Time!</p>
+                    <p class="text">Sign up for alerts!</p>
+                </div>
+                <p class="btn2"><a href="#">Sign Up</a></p>
+            </div>    
+        </div>
+        <div class="footer">
+            <P>Copyright © 2024 smiton1's odin project</P>
         </div>
     </div>
+
 </body>
 </html>
